--- a/styles/_navbar.scss
+++ b/styles/_navbar.scss
@@ -13,8 +13,8 @@
         font-size: var(--logoFontSize);
         font-weight: 600;
         letter-spacing: 0.1rem;
-        color: var(--text-heading-color);
-        transition: color $transition-duration ease, transform 0.5s ease;
+        color: var(--textHeadingColor);
+        transition: color $transitionDuration ease, transform 0.5s ease;
 
         &:hover{
             transform: scale(0.9);
@@ -27,9 +27,9 @@
         max-width: 25rem;
         flex-grow: 0.3;
             a{
-                color: var(--text-heading-color);
+                color: var(--textHeadingColor);
                 font-size: var(--linksFontSize);
-                transition: color $transition-duration ease;
+                transition: color $transitionDuration ease;
             }
     }
 
@@ -54,7 +54,7 @@
     }
 
     path{
-        stroke: var(--text-heading-color);
+        stroke: var(--textHeadingColor);
     }
 }
 
@@ -66,7 +66,7 @@
     width: 100%;
     max-width: 100vw;
     z-index: 99;
-    border-top: 1px solid var(--accent-color);
+    border-top: 1px solid var(--accentColor);
     @include frostedBackground;
 }
 
@@ -76,7 +76,7 @@
     
 
     .navLink{
-        color: var(--text-heading-color);
+        color: var(--textHeadingColor);
         font-size: var(--linksFontSize);
     }
 }
