--- a/styles/main.css
+++ b/styles/main.css
@@ -1,13 +1,13 @@
 @import url("https://fonts.googleapis.com/css2?family=Homemade+Apple&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap");
 :root {
-  --background-color: #121212;
+  --backgroundColor: #121212;
   --backgroundColorRGB: 18,18,18;
-  --accent-color: #1e1e1f;
-  --button-color: #ffff;
-  --button-text-color: #1e1e1f;
-  --text-color: #d6d6d6;
-  --tag-text-color: #ffffff;
-  --text-heading-color: #ffff;
+  --accentColor: #1e1e1f;
+  --buttonColor: #ffff;
+  --buttonTextColor: #1e1e1f;
+  --textColor: #d6d6d6;
+  --tagTextColor: #ffffff;
+  --textHeadingColor: #ffff;
   --headingFontSize: 2.188rem;
   --blockTextFontSize: 0.75rem;
   --tagFontSize: 0.688rem;
@@ -18,14 +18,14 @@
 }
 
 [data-theme=light] {
-  --background-color: #ffffff;
+  --backgroundColor: #ffffff;
   --backgroundColorRGB: 255,255,255;
-  --accent-color: #f3f3f3;
-  --button-color: #121212;
-  --button-text-color: #ffffff;
-  --text-color: #121212;
-  --tag-text-color: #121212;
-  --text-heading-color: #121212;
+  --accentColor: #f3f3f3;
+  --buttonColor: #121212;
+  --buttonTextColor: #ffffff;
+  --textColor: #121212;
+  --tagTextColor: #121212;
+  --textHeadingColor: #121212;
 }
 
 * {
@@ -38,7 +38,7 @@
 
 body {
   overflow-x: hidden;
-  background: var(--background-color);
+  background: var(--backgroundColor);
   transition: background 0.4s ease;
 }
 
@@ -54,7 +54,7 @@ a {
 
 .sectionTitle {
   font-size: var(--headingFontSize);
-  color: var(--text-heading-color);
+  color: var(--textHeadingColor);
   font-weight: 600;
   transition: color 0.4s ease;
 }
@@ -84,8 +84,8 @@ a {
   }
 }
 .navbar {
-  backdrop-filter: blur(10px);
-  -webkit-backdrop-filter: blur(10px);
+  backdrop-filter: blur(8px);
+  -webkit-backdrop-filter: blur(8px);
 }
 
 .navbarContent {
@@ -99,7 +99,7 @@ a {
   font-size: var(--logoFontSize);
   font-weight: 600;
   letter-spacing: 0.1rem;
-  color: var(--text-heading-color);
+  color: var(--textHeadingColor);
   transition: color 0.4s ease, transform 0.5s ease;
 }
 .navbarContent .logo:hover {
@@ -124,7 +124,7 @@ a {
   opacity: 0.55;
 }
 .navbarContent .linksContent a {
-  color: var(--text-heading-color);
+  color: var(--textHeadingColor);
   font-size: var(--linksFontSize);
   transition: color 0.4s ease;
 }
@@ -145,7 +145,7 @@ a {
   transform: rotate(180deg) scale(0.85);
 }
 .sun-svg path {
-  stroke: var(--text-heading-color);
+  stroke: var(--textHeadingColor);
 }
 
 #mobileNav {
@@ -155,9 +155,9 @@ a {
   width: 100%;
   max-width: 100vw;
   z-index: 99;
-  border-top: 1px solid var(--accent-color);
-  backdrop-filter: blur(10px);
-  -webkit-backdrop-filter: blur(10px);
+  border-top: 1px solid var(--accentColor);
+  backdrop-filter: blur(8px);
+  -webkit-backdrop-filter: blur(8px);
 }
 
 .mobileLinksContent {
@@ -177,7 +177,7 @@ a {
   opacity: 0.55;
 }
 .mobileLinksContent .navLink {
-  color: var(--text-heading-color);
+  color: var(--textHeadingColor);
   font-size: var(--linksFontSize);
 }
 
@@ -187,57 +187,55 @@ a {
   padding: 0 1.5rem;
   padding-top: 1.875rem;
 }
-
 #mainSection .leftSection {
   display: flex;
   justify-content: center;
 }
-
-.leftSectionContent .location {
+#mainSection .location {
   display: flex;
   margin-top: -7px;
   margin-bottom: 10px;
 }
-.leftSectionContent .location svg {
+#mainSection .location svg {
   width: 15px;
   height: 15px;
 }
-.leftSectionContent .location svg path {
-  stroke: var(--text-color);
+#mainSection .location svg path {
+  stroke: var(--textColor);
   transition: stroke 0.4s ease;
 }
-.leftSectionContent .location p {
+#mainSection .location p {
   margin-left: 3px;
   display: inline;
   font-size: var(--tagFontSize);
-  color: var(--text-color);
+  color: var(--textColor);
   transition: color 0.4s ease;
 }
-.leftSectionContent .skillTags {
-  color: var(--tag-text-color);
+#mainSection .skillTags {
+  color: var(--tagTextColor);
   transition: color 0.4s ease;
   display: flex;
   font-size: var(--tagFontSize);
   margin-bottom: 20px;
 }
-.leftSectionContent .skillTags .tag {
+#mainSection .skillTags .tag {
   padding: 0.5rem 1rem;
   border-radius: 20px;
-  background: var(--accent-color);
+  background: var(--accentColor);
   transition: background 0.4s ease;
 }
-.leftSectionContent .skillTags .tag:nth-child(1) {
+#mainSection .skillTags .tag:nth-child(1) {
   margin-right: 0.5rem;
 }
-.leftSectionContent .aboutMeText {
-  color: var(--text-color);
+#mainSection .aboutMeText {
+  color: var(--textColor);
   transition: color 0.4s ease;
   font-size: var(--blockTextFontSize);
   max-width: 350px;
 }
-.leftSectionContent .viewProjectsCTA {
-  background: var(--button-color);
-  color: var(--button-text-color);
+#mainSection .viewProjectsCTA {
+  background: var(--buttonColor);
+  color: var(--buttonTextColor);
   padding: 0.5rem 1rem;
   border-radius: 20px;
   display: inline-flex;
@@ -246,24 +244,23 @@ a {
   transition: transform 0.3s ease, color 0.4s ease, background 0.4s ease;
   margin-top: 25px;
 }
-.leftSectionContent .viewProjectsCTA svg {
+#mainSection .viewProjectsCTA svg {
   transform: rotate(-40deg);
   margin-left: 0.2rem;
   width: 17px;
   height: 17px;
   transition: transform 0.3s ease;
 }
-.leftSectionContent .viewProjectsCTA svg path {
-  stroke: var(--button-text-color);
+#mainSection .viewProjectsCTA svg path {
+  stroke: var(--buttonTextColor);
   transition: transform 0.4s ease, stroke 0.4s ease;
 }
-.leftSectionContent .viewProjectsCTA:hover {
+#mainSection .viewProjectsCTA:hover {
   transform: scale(0.9);
 }
-.leftSectionContent .viewProjectsCTA:hover svg {
+#mainSection .viewProjectsCTA:hover svg {
   transform: rotate(0);
 }
-
 #mainSection .rightSection {
   display: flex;
   align-items: center;
@@ -271,30 +268,14 @@ a {
   flex-direction: column;
   margin-top: 4rem;
 }
-
-.myStackTitle {
-  color: var(--tag-text-color);
-  margin-bottom: 1rem;
-  transition: color 0.4s ease;
-}
-.myStackTitle p {
-  font-size: var(--subHeadingFontSize);
-  font-family: "Homemade Apple", serif;
-}
-.myStackTitle svg {
-  display: none;
-  fill: var(--text-heading-color);
-  transition: fill 0.4s ease;
-}
-
-.rightSectionContent {
+#mainSection .rightSectionContent {
   display: grid;
   gap: 0.5rem;
   justify-content: center;
   grid-template-columns: repeat(2, 1fr);
 }
-.rightSectionContent .langCard {
-  background: var(--accent-color);
+#mainSection .langCard {
+  background: var(--accentColor);
   border-radius: 10px;
   padding: 1rem 1.5rem;
   -webkit-box-shadow: 3px 10px 28px 0px rgba(var(--backgroundColorRGB), 0.8);
@@ -308,9 +289,23 @@ a {
   justify-content: center;
   transition: background 0.4s ease, box-shadow 0.4s ease;
 }
-.rightSectionContent .langCard img {
+#mainSection .langCard img {
   width: 35px;
   height: 40px;
+}
+#mainSection .myStackTitle {
+  color: var(--tagTextColor);
+  margin-bottom: 1rem;
+  transition: color 0.4s ease;
+}
+#mainSection .myStackTitle p {
+  font-size: var(--subHeadingFontSize);
+  font-family: "Homemade Apple", serif;
+}
+#mainSection .myStackTitle svg {
+  display: none;
+  fill: var(--textHeadingColor);
+  transition: fill 0.4s ease;
 }
 
 #textCursor {
@@ -321,7 +316,7 @@ a {
   display: flex;
   align-items: center;
   justify-content: center;
-  border: 1px solid var(--accent-color);
+  border: 1px solid var(--accentColor);
   background: rgba(var(--backgroundColorRGB), 0.8);
   border-radius: 50%;
   -webkit-box-shadow: 3px 10px 28px 0px rgba(var(--backgroundColorRGB), 0.6);
@@ -335,7 +330,7 @@ a {
 
 #langText {
   font-size: var(--tagFontSize);
-  color: var(--text-heading-color);
+  color: var(--textHeadingColor);
   text-align: center;
 }
 
@@ -351,45 +346,9 @@ a {
   justify-content: flex-start;
   padding-bottom: 2rem;
 }
-#experienceSection .expTasks {
-  list-style-position: inside;
-}
-#experienceSection .rightSection .expBlock {
-  margin-bottom: 1.5rem;
-}
-#experienceSection .rightSection .expBlock:nth-last-child(1) {
-  margin-bottom: 0;
-}
-#experienceSection .rightSection .tagsContainer {
-  margin-bottom: 0.5rem;
-}
-#experienceSection .rightSection .expTag {
-  font-size: var(--tagFontSize);
-  background: var(--accent-color);
-  color: var(--tag-text-color);
-  padding: 0.3rem 1rem;
-  border-radius: 20px;
-  transition: background 0.4s ease, color 0.4s ease;
-}
-#experienceSection .rightSection .expTag:nth-child(1) {
-  margin-right: 0.3rem;
-}
-#experienceSection .rightSection .expTitle {
-  color: var(--text-heading-color);
-  font-weight: 400;
-  font-size: var(--subHeadingFontSize);
-  margin-bottom: 0.5rem;
-  transition: color 0.4s ease;
-}
-#experienceSection .rightSection .expTasks {
-  color: var(--text-color);
-  font-size: var(--blockTextFontSize);
-  transition: color 0.4s ease;
-}
-
-.downloadResumeCTA {
-  background: var(--button-color);
-  color: var(--button-text-color);
+#experienceSection .downloadResumeCTA {
+  background: var(--buttonColor);
+  color: var(--buttonTextColor);
   padding: 0.5rem 1rem;
   border-radius: 20px;
   display: inline-flex;
@@ -398,26 +357,78 @@ a {
   transition: transform 0.3s ease, color 0.4s ease, background 0.4s ease;
   max-width: fit-content;
 }
-.downloadResumeCTA svg {
+#experienceSection .downloadResumeCTA svg {
   transform: rotate(-40deg);
   margin-left: 0.2rem;
   width: 17px;
   height: 17px;
   transition: transform 0.3s ease;
 }
-.downloadResumeCTA svg path {
-  stroke: var(--button-text-color);
+#experienceSection .downloadResumeCTA svg path {
+  stroke: var(--buttonTextColor);
   transition: transform 0.4s ease, stroke 0.4s ease;
 }
-.downloadResumeCTA:hover {
+#experienceSection .downloadResumeCTA:hover {
   transform: scale(0.9);
 }
-.downloadResumeCTA:hover svg {
+#experienceSection .downloadResumeCTA:hover svg {
   transform: rotate(0);
 }
-
-html {
-  margin-bottom: 1000px;
+#experienceSection .rightSection {
+  position: relative;
+}
+#experienceSection .rightSection::before {
+  position: absolute;
+  content: "";
+  width: 2px;
+  background: var(--accentColor);
+  left: -19px;
+  height: 100%;
+}
+#experienceSection .expBlock {
+  padding-bottom: 1.5rem;
+  position: relative;
+}
+#experienceSection .expBlock::before {
+  content: "";
+  position: absolute;
+  left: -30px;
+  top: 0;
+  border-radius: 50px;
+  border: var(--accentColor) 2px solid;
+  background-color: var(--backgroundColor);
+  width: 20px;
+  height: 20px;
+}
+#experienceSection .expBlock:nth-last-child(1) {
+  padding-bottom: 0;
+}
+#experienceSection .tagsContainer {
+  margin-bottom: 0.5rem;
+}
+#experienceSection .expTag {
+  font-size: var(--tagFontSize);
+  background: var(--accentColor);
+  color: var(--tagTextColor);
+  padding: 0.3rem 1rem;
+  border-radius: 20px;
+  transition: background 0.4s ease, color 0.4s ease;
+}
+#experienceSection .expTag:nth-child(1) {
+  margin-right: 0.3rem;
+}
+#experienceSection .expTitle {
+  color: var(--textHeadingColor);
+  font-weight: 400;
+  font-size: var(--subHeadingFontSize);
+  margin-bottom: 0.5rem;
+  transition: color 0.4s ease;
+}
+#experienceSection .expTasks {
+  color: var(--textColor);
+  font-size: var(--blockTextFontSize);
+  transition: color 0.4s ease;
+  list-style-position: inside;
 }
 
 @media (min-width: 22.5rem) {
@@ -429,15 +440,15 @@ html {
     --buttonFontSize: 0.875rem;
     --subHeadingFontSize: 1.25rem;
   }
-  .leftSectionContent .location svg {
+  #mainSection .location svg {
     width: 16px;
     height: 16px;
   }
-  .leftSectionContent .viewProjectsCTA svg {
+  #mainSection .viewProjectsCTA svg {
     width: 19px;
     height: 19px;
   }
-  .rightSectionContent {
+  #mainSection .rightSectionContent {
     grid-template-columns: repeat(3, 1fr);
   }
   .mobileLinksContent {
@@ -480,7 +491,7 @@ html {
     justify-content: center;
     margin-top: 0;
   }
-  .rightSectionContent {
+  #mainSection .rightSectionContent {
     cursor: none;
   }
   .show {
@@ -488,9 +499,6 @@ html {
   }
   .hide {
     animation: hideCursor 0.3s forwards;
-  }
-  .watermark {
-    top: 16rem;
   }
   #experienceSection {
     padding-top: 4rem;
@@ -503,7 +511,7 @@ html {
     top: 7%;
     height: max-content;
   }
-  #experienceSection .leftSection .expTitleContainer {
+  #experienceSection .expTitleContainer {
     min-width: 400px;
   }
   #experienceSection .rightSection {
@@ -514,24 +522,17 @@ html {
   #mainSection .rightSection {
     flex-direction: row;
   }
-  .myStackTitle {
+  #mainSection .myStackTitle {
     position: absolute;
     margin-right: 300px;
     bottom: -5em;
     display: flex;
   }
-  .myStackTitle svg {
+  #mainSection .myStackTitle svg {
     margin-left: 10px;
     margin-top: -10px;
     display: block;
     transform: rotate(-75deg);
-  }
-  .watermark {
-    top: 18rem;
-    left: -5rem;
-  }
-  .watermark .text {
-    font-size: 100px;
   }
 }
 @media (min-width: 75rem) {
@@ -543,22 +544,15 @@ html {
     --buttonFontSize: 0.875rem;
     --subHeadingFontSize: 1.25rem;
   }
-  .leftSectionContent .aboutMeText {
-    max-width: 400px;
-  }
-  .rightSectionContent .langCard {
-    padding: 2rem 2.5rem;
-    min-width: 120px;
-  }
   #mainSection {
     padding-top: 12rem;
   }
-  .watermark {
-    top: 18rem;
-    left: -8rem;
+  #mainSection .aboutMeText {
+    max-width: 400px;
   }
-  .watermark .text {
-    font-size: 150px;
+  #mainSection .langCard {
+    padding: 2rem 2.5rem;
+    min-width: 120px;
   }
 }
 @media (min-width: 87.5rem) {
