--- a/styles/main.css
+++ b/styles/main.css
@@ -3,6 +3,7 @@
   --backgroundColor: #121212;
   --backgroundColorRGB: 18,18,18;
   --accentColor: #1e1e1f;
+  --guideColor: #464748;
   --buttonColor: #ffff;
   --buttonTextColor: #1e1e1f;
   --textColor: #d6d6d6;
@@ -21,6 +22,7 @@
   --backgroundColor: #ffffff;
   --backgroundColorRGB: 255,255,255;
   --accentColor: #f3f3f3;
+  --guideColor:#919396;
   --buttonColor: #121212;
   --buttonTextColor: #ffffff;
   --textColor: #121212;
@@ -89,17 +91,17 @@ a {
 }
 
 .navbarContent {
-  padding: 0.5rem 1.5rem;
   display: flex;
   align-items: center;
   justify-content: space-between;
+  padding: 0.5rem 1.5rem;
 }
 .navbarContent .logo {
   text-transform: uppercase;
   font-size: var(--logoFontSize);
+  color: var(--textHeadingColor);
   font-weight: 600;
   letter-spacing: 0.1rem;
-  color: var(--textHeadingColor);
   transition: color 0.4s ease, transform 0.5s ease;
 }
 .navbarContent .logo:hover {
@@ -212,16 +214,16 @@ a {
   transition: color 0.4s ease;
 }
 #mainSection .skillTags {
-  color: var(--tagTextColor);
-  transition: color 0.4s ease;
   display: flex;
+  color: var(--tagTextColor);
   font-size: var(--tagFontSize);
   margin-bottom: 20px;
+  transition: color 0.4s ease;
 }
 #mainSection .skillTags .tag {
+  background: var(--accentColor);
   padding: 0.5rem 1rem;
   border-radius: 20px;
-  background: var(--accentColor);
   transition: background 0.4s ease;
 }
 #mainSection .skillTags .tag:nth-child(1) {
@@ -234,12 +236,12 @@ a {
   max-width: 350px;
 }
 #mainSection .viewProjectsCTA {
-  background: var(--buttonColor);
-  color: var(--buttonTextColor);
-  padding: 0.5rem 1rem;
-  border-radius: 20px;
   display: inline-flex;
   align-items: center;
+  padding: 0.5rem 1rem;
+  border-radius: 20px;
+  background: var(--buttonColor);
+  color: var(--buttonTextColor);
   font-size: var(--buttonFontSize);
   transition: transform 0.3s ease, color 0.4s ease, background 0.4s ease;
   margin-top: 25px;
@@ -275,18 +277,18 @@ a {
   grid-template-columns: repeat(2, 1fr);
 }
 #mainSection .langCard {
-  background: var(--accentColor);
-  border-radius: 10px;
-  padding: 1rem 1.5rem;
-  -webkit-box-shadow: 3px 10px 28px 0px rgba(var(--backgroundColorRGB), 0.8);
-  -moz-box-shadow: 3px 10px 28px 0px rgba(var(--backgroundColorRGB), 0.8);
-  box-shadow: 3px 10px 28px 0px rgba(var(--backgroundColorRGB), 0.8);
-  width: min-content;
-  min-width: 100px;
-  max-height: 90px;
   display: flex;
   align-items: center;
   justify-content: center;
+  background: var(--accentColor);
+  border-radius: 10px;
+  padding: 1rem 1.5rem;
+  width: min-content;
+  min-width: 100px;
+  max-height: 90px;
+  -webkit-box-shadow: 3px 10px 28px 0px rgba(var(--backgroundColorRGB), 0.8);
+  -moz-box-shadow: 3px 10px 28px 0px rgba(var(--backgroundColorRGB), 0.8);
+  box-shadow: 3px 10px 28px 0px rgba(var(--backgroundColorRGB), 0.8);
   transition: background 0.4s ease, box-shadow 0.4s ease;
 }
 #mainSection .langCard img {
@@ -309,13 +311,13 @@ a {
 }
 
 #textCursor {
+  display: flex;
+  align-items: center;
+  justify-content: center;
   position: absolute;
   pointer-events: none;
   transform: translate(-50%, -50%) scale(0);
   z-index: 1000;
-  display: flex;
-  align-items: center;
-  justify-content: center;
   border: 1px solid var(--accentColor);
   background: rgba(var(--backgroundColorRGB), 0.8);
   border-radius: 50%;
@@ -335,11 +337,11 @@ a {
 }
 
 #experienceSection {
-  padding: 0 1.5rem;
   display: flex;
   flex-direction: column;
   justify-content: center;
   margin-top: 8rem;
+  padding: 0 1.5rem;
 }
 #experienceSection .leftSection {
   display: flex;
@@ -347,12 +349,12 @@ a {
   padding-bottom: 2rem;
 }
 #experienceSection .downloadResumeCTA {
-  background: var(--buttonColor);
-  color: var(--buttonTextColor);
-  padding: 0.5rem 1rem;
-  border-radius: 20px;
   display: inline-flex;
   align-items: center;
+  padding: 0.5rem 1rem;
+  border-radius: 20px;
+  background: var(--buttonColor);
+  color: var(--buttonTextColor);
   font-size: var(--buttonFontSize);
   transition: transform 0.3s ease, color 0.4s ease, background 0.4s ease;
   max-width: fit-content;
@@ -378,10 +380,10 @@ a {
   position: relative;
 }
 #experienceSection .rightSection::before {
+  background: var(--accentColor);
   position: absolute;
   content: "";
   width: 2px;
-  background: var(--accentColor);
   left: -19px;
   height: 100%;
 }
@@ -390,13 +392,13 @@ a {
   position: relative;
 }
 #experienceSection .expBlock::before {
+  border-radius: 50px;
+  border: var(--accentColor) 2px solid;
+  background-color: var(--backgroundColor);
   content: "";
   position: absolute;
   left: -30px;
   top: 0;
-  border-radius: 50px;
-  border: var(--accentColor) 2px solid;
-  background-color: var(--backgroundColor);
   width: 20px;
   height: 20px;
 }
@@ -419,8 +421,8 @@ a {
 }
 #experienceSection .expTitle {
   color: var(--textHeadingColor);
-  font-weight: 400;
   font-size: var(--subHeadingFontSize);
+  font-weight: 400;
   margin-bottom: 0.5rem;
   transition: color 0.4s ease;
 }
