modified color of guide line

--- a/styles/_config.scss
+++ b/styles/_config.scss
@@ -31,7 +31,7 @@
     --backgroundColor: #ffffff;
     --backgroundColorRGB: 255,255,255;
     --accentColor:  #f3f3f3;
-    --guideColor:#919396;
+    --guideColor:#c9ccd1;
     
     --buttonColor: #121212;
     --buttonTextColor: #ffffff;
