--- a/styles/_navbar.scss
+++ b/styles/_navbar.scss
@@ -69,7 +69,9 @@
     max-width: 100vw;
     z-index: 99;
     border-top: 1px solid var(--accentColor);
+    border-radius: 15px 15px 0 0;
     @include frostedBackground;
+   
 }
 
 .mobileLinksContent{
