--- a/styles/main.css
+++ b/styles/main.css
@@ -158,6 +158,7 @@ a {
   max-width: 100vw;
   z-index: 99;
   border-top: 1px solid var(--accentColor);
+  border-radius: 15px 15px 0 0;
   backdrop-filter: blur(8px);
   -webkit-backdrop-filter: blur(8px);
 }
