--- a/styles/_experienceSection.scss
+++ b/styles/_experienceSection.scss
@@ -1,31 +1,40 @@
 #experienceSection{
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    margin-top: 8rem;
+    margin-top: 5rem;
     padding: 0 1.5rem;
+    // background: rgb(212, 47, 47);
 
     .leftSection{
         display: flex;
-        justify-content: flex-start;
+        justify-content: center;
         padding-bottom: 2rem;
+        // background: lightgoldenrodyellow;
+    }
+
+
+    .expTitleContainer{
+        display: flex;
+        flex-direction: column;
+        align-items: center;
     }
 
     .downloadResumeCTA{
         @include buttonStyles;
         max-width: fit-content;
+        margin-top: 0.5rem;
     }
 
     .rightSection{
         position: relative;
-
+        margin-left: 0.5rem;
+        // background: cyan;
         &::before{
             background: var(--guideColor);
             position: absolute;
             content: '';
             width: 2px;
             left: -19px;
-            height: 100%;
+            bottom: 0;
+            height: 98%;
 
             transition: background $transitionDuration ease;
         }
@@ -34,7 +43,7 @@
     .expBlock{
         padding-bottom: 1.5rem;
         position: relative;
-        
+        // background:red;
         &::before{
             border-radius: 50px;
             border: var(--guideColor) 2px solid;
@@ -44,10 +53,10 @@
 
             content: '';
             position: absolute;
-            left: -30px;
-            top: 0;
-            width: 20px;
-            height: 20px;
+            left: -27.5px;
+            top: 5px;
+            width: 15px;
+            height: 15px;
         }
 
         &:nth-last-child(1){
@@ -79,6 +88,7 @@
         font-weight: 400;
         margin-bottom: 0.5rem;
         transition: color $transitionDuration ease;
+        line-height: 1.2em;
     }
 
     .expTasks{
