added transition to mobile nav

--- a/styles/_navbar.scss
+++ b/styles/_navbar.scss
@@ -80,6 +80,7 @@
     
 
     .navLink{
+        transition: color $transitionDuration ease;
         color: var(--textHeadingColor);
         font-size: var(--linksFontSize);
     }
