--- a/styles/main.scss
+++ b/styles/main.scss
@@ -10,4 +10,7 @@
 // experience section styles
 @import 'experienceSection';
 
+// portfolio section styles
+@import 'portfolioSection';
+
 @import 'responsive';
