--- a/styles/_portfolioSection.scss
+++ b/styles/_portfolioSection.scss
@@ -50,6 +50,7 @@
 
         margin-top: 0.5rem;
         opacity: 0;
+        pointer-events: none;
         list-style: none;
         background: var(--accentColor);
         border-radius: 10px;
@@ -75,6 +76,7 @@
 
     .showCategoryList{
         opacity: 1;
+        pointer-events: all;
     }
 }
 
