--- a/styles/main.css
+++ b/styles/main.css
@@ -489,6 +489,7 @@ a {
   margin-right: auto;
   margin-top: 0.5rem;
   opacity: 0;
+  pointer-events: none;
   list-style: none;
   background: var(--accentColor);
   border-radius: 10px;
@@ -512,6 +513,7 @@ a {
 }
 #portfolioSection .showCategoryList {
   opacity: 1;
+  pointer-events: all;
 }
 
 html {
