--- a/styles/_portfolioSection.scss
+++ b/styles/_portfolioSection.scss
@@ -11,7 +11,7 @@
         color: var(--tagTextColor);
         width: 100%;
 
-        max-width: 450px;
+        max-width: 300px;
         margin-left: auto;
         margin-right: auto;
 
@@ -44,7 +44,14 @@
 
     .categoryList{
 
-        max-width: 450px;
+        position: absolute;
+        top: 2.8rem;
+        left: 0;
+        right: 0;
+
+
+        max-width: 300px;
+        width: 100%;
         margin-left: auto;
         margin-right: auto;
 
@@ -77,6 +84,11 @@
     .showCategoryList{
         opacity: 1;
         pointer-events: all;
+    }
+
+    .projectFilterContainer{
+        // background-color: red;
+        position: relative;
     }
 }
 
