added active styling for category links

--- a/styles/_responsive.scss
+++ b/styles/_responsive.scss
@@ -69,7 +69,14 @@
                     color: var(--buttonTextColor);
                 }
             }
+
+            .activeCategory{
+                background: var(--buttonColor);
+                color: var(--buttonTextColor);
+            }
         }
+
+        
     }
     
 }
